--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cakedc/utils",
+    "name": "cakedc-fork/utils",
     "type": "cakephp-plugin",
     "description": "Utils Plugin for CakePHP",
     "keywords": ["cakephp","utility"],
